--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Lasagna</title>
+    <title>Pizza</title>
   </head>
 
   <body>
-    <h1>Lasagna</h1>
+    <h1>Pizza</h1>
     <h2>Description</h2>
     <h3>Ingredients</h3>
     <ul>
@@ -21,7 +21,7 @@
       <li>Step 3</li>
     </ol>
 
-    <img src="images/lasagna.jpeg">
+    <img src="images/pizza.jpeg">
 
   </body>
 </html>
