Home links updated

--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -23,7 +23,7 @@
 
     <img src="images/tiramisu.jpeg">
 
-    <a><a href=/Users/bethfuller/odin-recipes/index.html>Home</a>
+    <a><a href="../index.html">Home</a>
 
   </body>
 </html>
